tests/cases/compiler-development/artifact/errors/diagnostic-private-access.diagnostic
diagnostic error code=M0001 family=module message="function 'Secret::value' is not public" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-private-access.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-private-access.ari" bytes=103
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-private-access.ari" line=8 column=10 end_line=8 end_column=16 byte_start=84 byte_end=90 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-private-access.ari:8:10\n   |\n 8 |   return Secret::value();\n   |          ^^^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-private-access.ari" line=2 column=6 end_line=2 end_column=11 byte_start=18 byte_end=23 message="private function 'Secret::value' declared here"
  Snippet label=1 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-private-access.ari:2:6\n   |\n 2 |   fn value() -> i64 {\n   |      ^^^^^"
  Note index=0 location=none message="module visibility is enforced at the use site and the private declaration is shown as a secondary label"
  Help index=0 location=none message="mark function 'Secret::value' as pub or access it from inside module 'Secret'"
